--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Git Hub Session Demo</p>
      <p> Netify Configration 🛠</p>
      <p> Check Config 🛠</p>
+     <p> ADD Emojes 😊😊😂😊</p>
 </body>
 </html>
